--- a/app/src/main/res/layout/item_view_pager_img.xml
+++ b/app/src/main/res/layout/item_view_pager_img.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@android:color/black"
     android:layout_height="match_parent">
 
     <TextView
@@ -11,7 +12,6 @@
         android:layout_height="wrap_content" />
     <ImageView
         android:id="@+id/img_view_page"
-        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
