-加入bmob的应用更新功能 -添加编译时自动增加版本号 ----aa.bb.cc，aa和bb都是手动改，cc为git的提交次数

--- a/app/src/main/res/layout/item_recycleview_content.xml
+++ b/app/src/main/res/layout/item_recycleview_content.xml
@@ -12,5 +12,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="123话"
-        android:gravity="center" />
+        android:gravity="center|left" />
 </LinearLayout>
