--- a/app/src/main/res/layout/item_view_pager_img.xml
+++ b/app/src/main/res/layout/item_view_pager_img.xml
@@ -13,5 +13,6 @@
     <ImageView
         android:id="@+id/img_view_page"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"/>
 </LinearLayout>
