--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,19 +3,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_first"
             android:icon="@drawable/ic_menu_camera"
-            android:title="我的足迹" />
+            android:title="首页" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_collect"
             android:icon="@drawable/ic_menu_gallery"
             android:title="我的收藏" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_download"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="下载管理" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_cache"
             android:icon="@drawable/bmob_update_btn_check_off_focused_holo_light"
             android:title="清除缓存" />
         <item
