--- a/app/src/main/res/layout/activity_cartoon.xml
+++ b/app/src/main/res/layout/activity_cartoon.xml
@@ -13,21 +13,46 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="175dp"
         android:layout_marginEnd="175dp"
-        tools:layout_editor_absoluteX="168dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/content_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/content_recyclerView"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/cartoon_name" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:visibility="gone"
+        android:backgroundTint="@color/colorPrimary"
+        android:background="@color/colorPrimary"
+        app:borderWidth="0dp"
+        android:src="@drawable/ic_download"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toTopOf="@+id/content_recyclerView"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/content_recyclerView"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/cartoon_name"/>
+        app:layout_constraintVertical_bias="0.997" />
 </android.support.constraint.ConstraintLayout>
