--- a/app/src/main/res/layout/item_recycleview_content.xml
+++ b/app/src/main/res/layout/item_recycleview_content.xml
@@ -5,12 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:background="@color/colorAccent"
     android:layout_margin="@dimen/activity_horizontal_margin"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
+    <CheckBox
+        android:id="@+id/content_recyclerView_checkbox"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/content_recyclerView_text_num"
-        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="123话"
         android:gravity="center|left" />
+    <TextView
+        android:id="@+id/content_recyclerView_text_state"
+        android:text="已下载"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
