-完成读取本地资源，多线程下载会出错 -加入dbflow数据库

--- a/app/src/main/res/layout/fragment_downloaded.xml
+++ b/app/src/main/res/layout/fragment_downloaded.xml
@@ -30,6 +30,8 @@
            android:id="@+id/storageProgressBar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
+           app:fitBackground="@color/colorPrimaryDark"
+           app:unfitBackground="@android:color/darker_gray"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
         <TextView
             android:id="@+id/storage_text"
