--- a/app/src/main/res/layout/activity_cartoon.xml
+++ b/app/src/main/res/layout/activity_cartoon.xml
@@ -16,7 +16,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -42,7 +41,7 @@
         android:backgroundTint="@color/colorPrimary"
         android:background="@color/colorPrimary"
         app:borderWidth="0dp"
-        android:src="@drawable/ic_download"
+        android:src="@android:drawable/stat_sys_download"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginLeft="8dp"
