--- a/app/src/main/res/layout/item_recycleview_content.xml
+++ b/app/src/main/res/layout/item_recycleview_content.xml
@@ -21,7 +21,7 @@
         android:gravity="center|left" />
     <TextView
         android:id="@+id/content_recyclerView_text_state"
-        android:text="已下载"
+        android:text=""
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
