--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/toolbar_download"
-        android:icon="@drawable/ic_download"
+        android:icon="@android:drawable/stat_sys_download"
         android:title="下载"
         app:showAsAction="always"
         />
