-增加读写外部存储权限获取 -修复viewpager浏览图片时内存占用过高导致的OOM

--- a/app/src/main/res/layout/item_view_pager_img.xml
+++ b/app/src/main/res/layout/item_view_pager_img.xml
@@ -10,7 +10,7 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/img_view_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
