--- a/app/src/main/res/layout/item_indicator_bar.xml
+++ b/app/src/main/res/layout/item_indicator_bar.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:theme="@style/AppTheme.NoActionBar"
+    app:theme="@style/AppTheme"
     android:orientation="horizontal">
 
     <TextView
