--- a/app/src/main/res/layout/item_recycleview_main_cartoon.xml
+++ b/app/src/main/res/layout/item_recycleview_main_cartoon.xml
@@ -6,18 +6,21 @@
     tools:background="@color/colorAccent"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:background="?attr/selectableItemBackground"
     android:orientation="vertical">
     <ImageView
         android:layout_gravity="center"
         android:id="@+id/recycle_cartoon_avatar"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:transitionName="img"
         android:scaleType="fitXY"
         />
     <TextView
         android:id="@+id/recycle_cartoon_name"
         android:gravity="center"
         tools:text="name"
+        android:transitionName="title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
